--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -29,14 +29,19 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_snack_bar: ^0.3.0
+  cloud_firestore: null
   cupertino_icons: ^1.0.2
   custom_date_range_picker: ^1.0.10
   firebase_core: ^2.21.0
   fl_chart: null
   flutter:
     sdk: flutter
+  
+
+  
   flutter_launcher_icons: ^0.13.1
   flutter_slidable: ^3.0.0
+  
   google_fonts: null
   hive: null
   hive_flutter: null
@@ -47,13 +52,18 @@ dependencies:
   shared_preferences: ^2.2.1
   smooth_page_indicator: null
   syncfusion_flutter_charts: null
-  cloud_firestore:
+
 dev_dependencies:
   build_runner: null
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   hive_generator: null
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "image/th.jpeg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
